--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,5 +1,10 @@
 FROM php:7.4-fpm
 
+RUN apt-get update && apt-get install -y \
+  libxrender-dev \
+  libfontconfig \
+  libxext-dev
+
 COPY --from=composer:2.0.0-alpha2 /usr/bin/composer /usr/bin/composer
 
 COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin/
